test/soya/error/recursive.soy
class point {
  attribute point val;

  method void constructor (point val){
    this.val = val;
  }

}
